--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/postgres": "^0.9.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.7.0",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2"
   }
